--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
+    "next-cloudinary": "^5.20.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
